infrastructure/networking/gateway/gateway-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-external
  labels:
    app: gateway-external
  annotations:
    cert-manager.io/cluster-issuer: ingress-cluster-issuer
    external-dns.kubernetes.io/target: tunnel.tamhomelab.com
spec:
  addresses:
  - type: IPAddress
    value: 10.10.20.36
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.tamhomelab.com"
      tls:
        certificateRefs:
          - name: cert-tamhomelab-external
            kind: Secret
            group: "" # required
      allowedRoutes:
        namespaces:
          from: All
