infrastructure/networking/gateway/gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  labels:
    app: gateway-internal
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer
spec:
  addresses:
  - type: IPAddress
    value: 10.10.20.35
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.tamhomelab.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.tamhomelab.com"
      tls:
        certificateRefs:
          - name: cert-tamhomelab-internal
            kind: Secret
            group: "" # required
      allowedRoutes:
        namespaces:
          from: All
