infrastructure/networking/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer
spec:
  addresses:
  - type: IPAddress
    value: 192.168.1.35
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.tamhomelab.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.tamhomelab.com"
      tls:
        certificateRefs:
          - name: cert-tamhomelab
            kind: Secret
            group: "" # required
      allowedRoutes:
        namespaces:
          from: All
