infrastructure/networking/gateway/internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: gateway
spec:
  addresses:
  - type: IPAddress
    value: 192.168.1.33
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.k8s.home-tm.duckdns.org"
      allowedRoutes:
        namespaces:
          from: All
