infrastructure/networking/gateway/http-redirect-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect-external
  namespace: gateway
spec:
  parentRefs:
    - name: gateway-external
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
