infrastructure/networking/gateway/http-redirect-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect-internal
  namespace: gateway
spec:
  parentRefs:
    - name: gateway-internal
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
